# django-101

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
monthly_challenges/: manage.py
monthly_challenges/challenges/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
monthly_challenges/challenges/static/challenges/: challenge.css  index.css
monthly_challenges/challenges/static/challenges/includes/: header.css
monthly_challenges/challenges/templates/challenges/: challenge.html  index.html
monthly_challenges/challenges/templates/challenges/includes/: header.html
monthly_challenges/monthly_challenges/: asgi.py  settings.py  urls.py  wsgi.py
monthly_challenges/static/: globals.css
monthly_challenges/templates/: 404.html  layout.html
