[metadata]
name = monthly_challenges
version = 0.1
description = simple django app
author = Szymon Szyszkowski
classifiers =
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.10
install_requires =
    django
packages=find:
include_package_data = True

[options.extras_require]
dev =
    flake8
    black
    mypy
    pytest
    pytest-cov
    pytest-lazy-fixture
    pylint
    isort
    docformatter[tomli]
    pre-commit
    towncrier

[flake8]
max-line-length = 85
max-complexity = 10
ignore = 
    W703 
    C209
    F401
    E501
exclude = 
    .git
    .venv
    __pycache__
    ./pytest_cache
    .github
    .mypy_cache
    docs
    .coverage
    Makefile
    pyproject.toml
    setup.cfg
    README.md
    .tox
    data
    docker
